--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,12 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>We use your location to provide a personalized experience and to record location-based actions in your app's history when the app is in use.</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>We use your location to provide a personalized experience and to record location-based actions in your app's history even when the app is running in the background.</string>
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>We use your location to provide a personalized experience and to record location-based actions in your app's history, whether the app is in use or running in the background.</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>FaceID is used to securely access your account and protect your sensitive data.</string>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -30,6 +28,18 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We use your location to provide a personalized experience and to record location-based actions in your app's history, whether the app is in use or running in the background.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We use your location to provide a personalized experience and to record location-based actions in your app's history even when the app is running in the background.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We use your location to provide a personalized experience and to record location-based actions in your app's history when the app is in use.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_dartobservatory._tcp</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -49,9 +59,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
 </dict>
 </plist>
