--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   crypto: ^3.0.2
   encrypt: ^5.0.1
   flutter_secure_storage: ^8.0.0
+  local_auth: ^2.1.6
 
 dev_dependencies:
   flutter_test:
