--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSFaceIDUsageDescription</key>
-	<string>FaceID is used to securely access your account and protect your sensitive data.</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
@@ -21,25 +19,27 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.0.1</string>
+	<string>0.0.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>We use your location to provide a personalized experience and to record location-based actions in your app's history, whether the app is in use or running in the background.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>We use your location to provide a personalized experience and to record location-based actions in your app's history even when the app is running in the background.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We use your location to provide a personalized experience and to record location-based actions in your app's history when the app is in use.</string>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_dartobservatory._tcp</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>FaceID is used to securely access your account and protect your sensitive data.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We use your location to provide a personalized experience and to record location-based actions in your app&apos;s history, whether the app is in use or running in the background.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We use your location to provide a personalized experience and to record location-based actions in your app&apos;s history even when the app is running in the background.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We use your location to provide a personalized experience and to record location-based actions in your app&apos;s history when the app is in use.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
