--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,27 +32,13 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  target 'RunnerTests' do
+    inherit! :search_paths
+  end
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
-
-    shell_script_path = "Pods/Target Support Files/#{target.name}/#{target.name}-frameworks.sh"
-    if File::exists?(shell_script_path)
-      shell_script_input_lines = File.readlines(shell_script_path)
-      shell_script_output_lines = shell_script_input_lines.map { |line| line.sub("source=\"$(readlink \"${source}\")\"", "source=\"$(readlink -f \"${source}\")\"") }
-      File.open(shell_script_path, 'w') do |f|
-        shell_script_output_lines.each do |line|
-          f.write line
-        end
-      end
-    end
-  end
-
-  installer.pods_project.targets.each do |target|
-      target.build_configurations.each do |config|
-          config.build_settings['CODE_SIGN_IDENTITY'] = ''
-      end
   end
 end
